--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,6 @@ jobs:
 		runs-on: ubuntu-latest
 		steps:
 			- uses: actions/checkout@v3
-			- uses: Girish/nginx-docker-action@v1
+			- uses: gauthamgirish50/nginx-docker-action@main
 				id: nginx
 			- run: echo "Nginx status: ${{ steps.nginx.outputs.nginx_status }}"
